# Astra

./: .dockerignore  .gitignore  all_inputs.csv  analyze_context.py  audit_ai_bloat.py  client_simulation.py  debug_S.csv  dispatch_training.py  docker-compose.infra.yml  docker-compose.yml  example.html  generate_training_csv.py  ideas-killer.md  inputs.csv  match_sesiones_optimizado.csv  match_sessions.py  package.json  roadmap.md  scan.py  test_deepgram.py  tree.txt
docs/: arquitectura.md  (+8 more)
modules/astra-ingest/: .gitignore  Dockerfile  alembic.ini  debug_S.csv  docker-compose.yml  pyproject.toml  requirements.txt  run_grpc.py  templates_report.csv
modules/astra-ingest/migrations/: env.py
modules/astra-ingest/migrations/versions/: 042dbd919452_add_templates_table.py  11af202ecae3_add_zone_mappings_table.py  370d79bd5bfd_add_table_templates_and_ooxml_path.py  63ac525c241b_add_label_catalog_and_user_label.py  69d16f31da52_initial_schema.py  (+7 more)
modules/astra-ingest/minutes-templates/: template_c0_ac081c706c37.xml  template_c11_22468ec6e15d.xml  template_c50_94d9353ed97c.xml  template_c77_0daa5fd9efc6.xml  template_c79_a9ed0cd7ade3.xml  template_c80_c81b2a6ef66a.xml  template_c83_2e0a69bb0dae.xml  template_c84_2f06016e44dc.xml  template_c87_1b3b913298e3.xml  template_c90_319bc1e240ef.xml  template_c92_ed864f58a248.xml  template_c95_a6ad4adc01ea.xml  template_c96_e2f98dc1579d.xml  template_c99_7b0039fcba09.xml
modules/astra-ingest/scripts/: docx-txt.py  generate_protos.sh
modules/astra-ingest/src/: config.py  export_templates.py  extract_xml_fragments.py  main.py  run_minutes_induction_v2.py  test_clustering_minutes.py
services/astra-core/: Dockerfile  Dockerfile.runpod  pyproject.toml  requirements.txt  runpod_handler.py
services/astra-core/scripts/: start.sh
services/astra-core/src/: config.py  main.py
services/astra-core/tests/: test_asr.py
(+412 files in other folders)
