[tool.poetry]
name = "astra-core"
version = "0.1.0"
description = "ASTRA Core Semantic Engine"
authors = ["ASTRA Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic-settings = "^2.1.0"
openai = "^1.12.0"
python-multipart = "^0.0.9"
onnxruntime = "^1.17.0"
tokenizers = "^0.15.0"
numpy = "^1.26.0"
qdrant-client = "^1.7.3"
rapidfuzz = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
